fixed shift items in the muuri grid, and organized THALIA_CHARA & lot more

--- a/dev/import/styles/page-home.scss
+++ b/dev/import/styles/page-home.scss
@@ -391,7 +391,7 @@ html[thalia-social-hover="true"]:not([thalia-chara-state="grabbing"]) .interacti
 
 .gallery-grid {
     --ggrid-padding: 4em;
-    --ggrid-gap: 1.2em;
+    --ggrid-gap: 0.65em;
     --ggrid-col-nb: 4;
     --ggrid-col-size: calc(((100vw - var(--scrollbar-width) - 4px) - (var(--ggrid-padding) * 2)) / var(--ggrid-col-nb));
 
@@ -399,23 +399,11 @@ html[thalia-social-hover="true"]:not([thalia-chara-state="grabbing"]) .interacti
     padding: var(--ggrid-padding);
     padding-bottom: 12em;
 
-    // shift
-    .grid-muuri--item {
-        box-sizing: border-box;
-        padding: var(--ggrid-gap);
-        //outline: 1px dotted red;
-
-        &:nth-child(2) {
-            margin-top: 8em;
-        }
-    }
-
     .item-gallery {
         --ggrid-item-size-x: 1;
         --ggrid-item-size-y: 1;
         font-size: 1em;
         border-radius: 1em;
-        margin-bottom: 3em;
         position: relative;
         max-width: calc(var(--ggrid-col-size) * var(--ggrid-item-size-x) - (var(--ggrid-gap) * 2));
 
@@ -464,6 +452,10 @@ html[thalia-social-hover="true"]:not([thalia-chara-state="grabbing"]) .interacti
                 text-wrap: nowrap;
                 text-overflow: ellipsis;
                 overflow: hidden;
+
+                &.placeholder {
+                    opacity: 0;
+                }
             }
         }
 
@@ -491,6 +483,33 @@ html[thalia-social-hover="true"]:not([thalia-chara-state="grabbing"]) .interacti
         .title:active ~ .thumbnail > wrapper {
             transform: translateY(0.075em);
             transition: transform 0.05s ease;
+        }
+    }
+
+    .grid-muuri--item {
+        box-sizing: border-box;
+        padding: var(--ggrid-gap);
+        margin-bottom: 6em;
+
+        // shift
+        &.item-shift {
+            box-sizing: content-box;
+
+            .item-gallery {
+                transition-duration: 0.4s;
+                transition-timing-function: cubic-bezier(0.5, 0.1, 0.1, 1);
+                transition-property: transform;
+
+                html[thalia-gallery-filter="false"] & {
+                    transform: translateY(var(--thalia-gallery-item-shift, 0px));
+                }
+                html:not([thalia-gallery-filter="false"]) & {
+                    transform: translateY(0);
+                }
+            }
+            html:not([thalia-gallery-filter="false"])[thalia-gallery-filter-previous="false"] &.muuri-item-hidden .item-gallery {
+                transform: translateY(var(--thalia-gallery-item-shift, 0px));
+            }
         }
     }
 }
@@ -588,7 +607,7 @@ html[thalia-social-hover="true"]:not([thalia-chara-state="grabbing"]) .interacti
                         transform 0.4s cubic-bezier(0.2, 0.8, 0, 0.8);
         }
         &:active {
-            opacity: 1;
+            opacity: 0.75;
             transform: rotateZ(0deg) scale(1.3);
             transition: margin 0.4s ease,
                         opacity 0.2s ease,
